--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 
-		<title>ClearingHouse</title>
+		<title>Guardian</title>
+		<link rel="shortcut icon" href="images/favicon.ico">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
