--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 		<script src="js/myscript.js"></script>
 
 	</head>
-	<body style="overflow-x: hidden;">
+	<body style="overflow-x: hidden; font-family: Brandon Grotesque;">
 		<div id="app"></div>
 		<script type="text/javascript" src="bundle.min.js"></script>
 	</body>
